--- a/style.css
+++ b/style.css
@@ -27,33 +27,33 @@
     --breakpoint-xl: 1200px;
   }
   body {
-      background: red;
+      background: red!important;
   }
   a {
   }
   .field{
-    width: 2em ;
-    height: 2em;
+    width: 2em !important;
+    height: 2em!important;
   }
   #questionSidePanel{
-    border: 1px solid #e0e0e0;
-    box-shadow: 0px 3px 17px #dddd;
-    border-radius: 28px;
+    border: 1px solid #e0e0e0!important;
+    box-shadow: 0px 3px 17px #dddd!important;
+    border-radius: 28px!important;
   }
   #questionDisplay{
-    padding: 35px;
+    padding: 35px!important;
   }
   #questionDisplay #questionSidePanel img{
-    background: #ececec;
-    border-radius: 20px;
-    padding: 7px;
-    margin: 11px;
-    border: 1px solid #ddd;
+    background: #ececec!important;
+    border-radius: 20px!important;
+    padding: 7px!important;
+    margin: 11px!important;
+    border: 1px solid #ddd!important;
   }
   #questionDisplay #contentImage7{
     margin: 0 auto !important;
     box-shadow: -1px 0px 0px #343434!important;
-    border-radius: 3px;
+    border-radius: 3px!important;
   }
   #questionDisplay b{
     text-align: center!important;
