--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
 
 :root {
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
+  --tifany: #1DE9B6;
+  --magenta: #E91D50;
+  --light-magenta-0:#ffd5df;
+  --light-gray-0: #dddd;
+  --dark: #2c2c2c;
+
+  
   --pink: #e83e8c;
   --red: #dc3545;
   --orange: #fd7e14;
@@ -21,7 +25,6 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --dark: #343a40;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -663,7 +666,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .highlight{
-  background-color: #ffd5df !important;
+  background-color: var(--light-magenta-0) !important;
 }
 
 
