--- a/style.css
+++ b/style.css
@@ -70,7 +70,9 @@ body.bg-1 {
 
 /* line 24, ../../app/learningApps-org/base/_base.scss */
 body.bg-2 {
-  background-image: url('/images/quiz/bg-2.gif') !important;
+  /* background-image: url('/images/quiz/bg-2.gif') !important; */
+  /* background: #41526b !important; */
+  background: #41526be0 !important;
 }
 
 /* line 24, ../../app/learningApps-org/base/_base.scss */
@@ -89,12 +91,17 @@ h1, h2, h3, h4, h5, h6 {
 /* meseage */
 #AppClientTaskPanel{
   padding: 25px!important;
-  box-shadow: rgb(236 236 236) 0px 1px 5px!important;
-  border-radius: 3px;
+  box-shadow: 0px 1px 5px #dddd!important;
+  border-radius: 3px !important;
   background-color: #ffff!important;
   border-top: 9px solid #ffa537dd!important;
   border-left: 1px solid #dddd!important;
+  border-right: 1px solid #dddd!important;
   border-bottom: 1px solid #dddd!important;
+  -webkit-border-radius: 3px !important;
+  -moz-border-radius: 3px !important;
+  -ms-border-radius: 3px !important;
+  -o-border-radius: 3px !important;
 }
 #AppClientTaskPanel p{
   margin: 0 0 15px !important;
@@ -114,6 +121,19 @@ h1, h2, h3, h4, h5, h6 {
   background: linear-gradient(338deg, rgba(149,130,255,1) 0%, rgba(120,176,253,1) 100%)!important;
   border-radius: 20px!important;
 }
+#AppClientTaskPanel div button:hover{
+  opacity: 0.5;
+}
+
+
+/* body */
+#crossword{
+  background: #dddddd61;
+  margin: 23% 0;
+}
+
+
+
 
 .filled{
 
