--- a/style.css
+++ b/style.css
@@ -29,20 +29,12 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --breakpoint-xs: 0;
+  --breakpoint-xs: 300PX;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
 }
-
-
-/* @font-face {
-  font-family: 'ImpactURW';
-  src: url("../fonts/30A60D_0_0.eot");
-  src: url("../fonts/30A60D_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/30A60D_0_0.woff2") format("woff2"), url("../fonts/30A60D_0_0.woff") format("woff"), url("../fonts/30A60D_0_0.ttf") format("truetype");
-} */
-
 
 /* line 11, ../../app/learningApps-org/base/_base.scss */
 body, html {
@@ -57,10 +49,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-
   color: #565656 !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 /* line 24, ../../app/learningApps-org/base/_base.scss */
@@ -88,6 +77,17 @@ h1, h2, h3, h4, h5, h6 {
 
 /* *****Ariana Do********* */
 
+/* body */
+#wrapper{
+  background: #41526be0 !important;
+}
+#crossword{
+  background: #dddddd61 !important;
+  margin: 23% 0!important; 
+  height: 628px!important; 
+}
+
+
 /* meseage */
 #AppClientTaskPanel{
   padding: 25px!important;
@@ -98,8 +98,8 @@ h1, h2, h3, h4, h5, h6 {
   border-left: 1px solid #dddd!important;
   border-right: 1px solid #dddd!important;
   border-bottom: 1px solid #dddd!important;
-  margin: 40% 15% !important;
-
+  margin: 5% 15%!important;
+  width: 70% !important;
 }
 #AppClientTaskPanel p{
   margin: 0 0 15px !important;
@@ -124,29 +124,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/* body */
-#wrapper{
-  background: #41526be0 !important;
-}
-#crossword{
-  background: #dddddd61 !important;
-  margin: 23% 0!important; 
-  height: 628px!important; 
+/* modal */
+.field {
+
 }
 
 
-
-
+/* 
 .filled{
 
 }
 
 .highlight{
   background-color: var(--light-magenta-0) !important;
-}
+} */
 
 
-#questionSidePanel{
+/* #questionSidePanel{
   border: 1px solid #e0e0e0!important;
   box-shadow: 0px 3px 17px #dddd!important;
   border-radius: 28px!important;
@@ -175,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block!important;
   padding: 20px!important;
   font-size: 20px!important;
-}
+} */
 /* #questionDisplay #eingabe{
   border: 1px solid #dddd!important;
   padding: 10px 30px!important;
@@ -197,12 +191,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 20px!important;
   padding: 10px!important;
 } */
-
+/* 
 .blink {
   background: #ffd9d9!important;
-}
+} */
 
-#questionDisplay input[type=button]{
+/* #questionDisplay input[type=button]{
   padding: 10px 30px!important;
   border-radius: 3px!important;
   background: #53eac5!important;
@@ -211,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 35px 0 0!important;
   border: 2px solid #00ca97!important;
   padding: 15px !important;
-}
+} */
 
 
 
@@ -221,7 +215,7 @@ h1, h2, h3, h4, h5, h6 {
 /* // Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {  
   /* table */
-  .field{
+  /* .field{
     width: 3.5em !important;
     height: 3.5em!important;
   }
@@ -232,15 +226,13 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 5px!important;
     box-shadow: none!important;
   }
-  #questionDisplay{
-  }
+  #questionDisplay{ */
+  /* } */
   /* modal */
-  #questionSidePanel div{
+  /* #questionSidePanel div{
     background: #fff!important;
-    opacity: 1!important;
-    border: 1px solid #e2e2e2!important;
-    border-radius: 5px!important;
-  }
+
+  } */
 }
 
 /* // Small devices (landscape phones, less than 768px) */
