--- a/style.css
+++ b/style.css
@@ -159,25 +159,30 @@ h1, h2, h3, h4, h5, h6 {
   -o-border-radius: 3px!important;
 }
 
-
-
-
-
-/* #questionSidePanel{
+#questionSidePanel{
   border: 1px solid #e0e0e0!important;
   box-shadow: 0px 3px 17px #dddd!important;
-  border-radius: 28px!important;
+  border-radius: 8px!important;
+}
+#questionSidePanel div{
+  border-radius: 8px!important;
 }
 #questionDisplay{
-  padding: 35px!important;
-}
-#questionDisplay #questionSidePanel img{
-  background: #ececec!important;
-  border-radius: 20px!important;
-  padding: 7px!important;
-  margin: 11px!important;
   border: 1px solid #ddd!important;
+  border-radius: 8px!important;
+  padding: 50px!important;
+} 
+
+#questionDisplay #questionSidePanel img{
+  display: none!important;
+  max-height: none;
 }
+
+#questionDisplay #questionSidePanel img::after{
+  content:"\f00d";
+}
+
+
 #questionDisplay #contentImage7{
   margin: 0 auto !important;
   box-shadow: -1px 0px 0px #343434!important;
@@ -192,7 +197,9 @@ h1, h2, h3, h4, h5, h6 {
   display: block!important;
   padding: 20px!important;
   font-size: 20px!important;
-} */
+} 
+
+
 /* #questionDisplay #eingabe{
   border: 1px solid #dddd!important;
   padding: 10px 30px!important;
@@ -242,9 +249,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 3.5em !important;
     height: 3.5em!important;
   }
-  #questionDisplay{
 
-  }
   /* } */
   /* modal */
   /* #questionSidePanel div{
