--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-#questionSidePanel div:only-child img:after{
+#questionSidePanel div img::after{
   content: "\f235"!important;
   background-color: white!important;
   color: rgb(253, 122, 145)!important;
@@ -822,50 +822,4 @@ h1, h2, h3, h4, h5, h6 {
 .card.newcard .pin {
   display:none;
 }
-
-
-
-/*
-////////////////////////////////////////////////////////////////////////////////
-// This file will be loaded inside the LearningApp
-////////////////////////////////////////////////////////////////////////////////
-*/
-/*
-////////////////////////////////////////////////////////////////////////////////
-// Adjust cards
-////////////////////////////////////////////////////////////////////////////////
-*/
-/*
-  Rotation will not work on all templates, so better not use it
-
-.card:nth-child(1) { transform: rotate(-5deg); }
-.card:nth-child(2) { transform: rotate( 1deg); }
-.card:nth-child(3) { transform: rotate(-2deg); }
-.card:nth-child(4) { transform: rotate( 0deg); }
-.card:nth-child(5) { transform: rotate( 2deg); }
-.card:nth-child(6) { transform: rotate(-1deg); }
-.card:nth-child(7) { transform: rotate( 1deg); }
-.card:nth-child(8) { transform: rotate( 2deg); }
-
-*/
-/*
-////////////////////////////////////////////////////////////////////////////////
-// Recolor axes and labels
-////////////////////////////////////////////////////////////////////////////////
-*/
-/*
-////////////////////////////////////////////////////////////////////////////////
-// Hide the original check solution button
-////////////////////////////////////////////////////////////////////////////////
-*/
-/*
-////////////////////////////////////////////////////////////////////////////////
-// Hide and restyle some LearningApp basic components
-////////////////////////////////////////////////////////////////////////////////
-*/
-/*
-////////////////////////////////////////////////////////////////////////////////
-// Restyle any button used inside the App
-////////////////////////////////////////////////////////////////////////////////
-*/
 
