--- a/style.css
+++ b/style.css
@@ -216,10 +216,9 @@ h1, h2, h3, h4, h5, h6 {
 
 #questionDisplay .filled{
   margin: 0 6px!important;
-  /*background: #fff!important;
-  */border: 3px solid #1de9b6!important;
-  /*width: 50px !important;
-  */height: 50px !important;
+  background: #fff!important;
+  border: 3px solid #1de9b6!important;
+  height: 50px !important;
   border-radius: 8px !important;
   padding: 10px !important;
   -webkit-border-radius: 8px !important;
@@ -244,7 +243,7 @@ h1, h2, h3, h4, h5, h6 {
 opacity: 0.5!important;
 }
 
-.blink {
+#questionDisplay .filled .blink {
 	animation-name: blinker!important;
 	animation-duration: 0.8s!important;
 	animation-iteration-count:infinite!important;
@@ -254,7 +253,7 @@ opacity: 0.5!important;
 }
 @keyframes blinker {
   from {
-    box-shadow: 0px 0px 0px 2px #ffbb4c;
+    box-shadow: 0px 0px 0px 2px rgb(0, 173, 130);
     }
   to {
     box-shadow: 0px 0px 0px 2px #ffff;
